--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -22,6 +22,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="edu.osu.guessthatimage.LoginScreen"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY"
+            android:screenOrientation="unspecified" >
+            <intent-filter>
+                <action android:name="edu.osu.guessthatimage.LoginScreen" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="edu.osu.guessthatimage.OptionMenu"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY"
+            android:screenOrientation="unspecified" >
+            <intent-filter>
+                <action android:name="edu.osu.guessthatimage.OptionMenu" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
