--- a/GuessThatImage/AndroidManifest.xml
+++ b/GuessThatImage/AndroidManifest.xml
@@ -22,7 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="edu.osu.guessthatimage.LoginScreen"
             android:label="@string/app_name"
@@ -35,7 +34,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="edu.osu.guessthatimage.OptionMenu"
             android:label="@string/app_name"
@@ -47,6 +45,10 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.osu.guessthatimage.GameSession"
+            android:label="@string/title_activity_game_session" >
         </activity>
     </application>
 
