--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:name="edu.osu.guessthatimage.GameSession"
             android:label="@string/title_activity_game_session" >
         </activity>
+        <activity
+            android:name="edu.osu.guessthatimage.Game"
+            android:label="@string/title_activity_game" >
+        </activity>
     </application>
 
 </manifest>
