--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:label="@string/title_activity_game_session" >
         </activity>
         <activity
+            android:name="edu.osu.guessthatimage.Game"
+            android:label="@string/title_activity_game" >
+        </activity>
+        <activity
             android:name="edu.osu.guessthatimage.Settings"
             android:label="@string/title_activity_settings" >
         </activity>
