--- a/GuessThatImage/AndroidManifest.xml
+++ b/GuessThatImage/AndroidManifest.xml
@@ -47,8 +47,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.osu.guessthatimage.GameSession"
-            android:label="@string/title_activity_game_session" >
+            android:name="edu.osu.guessthatimage.Game"
+            android:label="@string/title_activity_game" >
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.Settings"
