--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -51,10 +51,12 @@
             android:label="@string/title_activity_game" >
         </activity>
         <activity
+            android:name="edu.osu.guessthatimage.SignUp"
+            android:label="@string/title_activity_signup" >
+        </activity>
+        <activity
             android:name="edu.osu.guessthatimage.Settings"
             android:label="@string/title_activity_settings" >
-            android:name="edu.osu.guessthatimage.Game"
-            android:label="@string/title_activity_game" >
         </activity>
     </application>
 
