--- a/GuessThatImage/AndroidManifest.xml
+++ b/GuessThatImage/AndroidManifest.xml
@@ -54,7 +54,16 @@
             android:name="edu.osu.guessthatimage.Settings"
             android:label="@string/title_activity_settings" >
             android:name="edu.osu.guessthatimage.Game"
-            android:label="@string/title_activity_game" >
+            android:label="@string/title_activity_game" >
+        </activity>
+        <activity
+            android:name="edu.osu.guessthatimage.LeaderBoard"
+            android:label="@string/title_activity_leader_board" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
