--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -51,12 +51,16 @@
             android:label="@string/title_activity_game" >
         </activity>
         <activity
-            android:name="edu.osu.guessthatimage.SignUp"
-            android:label="@string/title_activity_signup" >
+            android:name="edu.osu.guessthatimage.Settings"
+            android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="edu.osu.guessthatimage.Settings"
-            android:label="@string/title_activity_settings" >
+            android:name="edu.osu.guessthatimage.SignUp">
+
+        </activity>
+        <activity
+            android:name="edu.osu.guessthatimage.LeaderBoard"
+            android:label="@string/title_activity_leader_board" >
         </activity>
     </application>
 
