--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -40,11 +40,6 @@
             android:launchMode="standard"
             android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY"
             android:screenOrientation="unspecified" >
-            <intent-filter>
-                <action android:name="edu.osu.guessthatimage.LoginScreen" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.Game"
@@ -55,12 +50,16 @@
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="edu.osu.guessthatimage.SignUp">
-
-        </activity>
-        <activity
             android:name="edu.osu.guessthatimage.LeaderBoard"
             android:label="@string/title_activity_leader_board" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="edu.osu.guessthatimage.SignUp">
         </activity>
     </application>
 
