--- a/GuessThatImage/bin/AndroidManifest.xml
+++ b/GuessThatImage/bin/AndroidManifest.xml
@@ -47,14 +47,17 @@
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.Settings"
-            android:label="@string/title_activity_settings" >
+            android:label="@string/title_activity_settings" >
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.LeaderBoard"
             android:label="@string/title_activity_leader_board" >
         </activity>
+        <activity android:name="edu.osu.guessthatimage.SignUp" >
+        </activity>
         <activity
-            android:name="edu.osu.guessthatimage.SignUp">
+            android:name="edu.osu.guessthatimage.Help"
+            android:label="@string/title_activity_help" >
         </activity>
     </application>
 
