--- a/GuessThatImage/AndroidManifest.xml
+++ b/GuessThatImage/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="edu.osu.guessthatimage.SplashScreen"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,9 +27,7 @@
             android:name="edu.osu.guessthatimage.LoginScreen"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY"
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY">
             <intent-filter>
                 <action android:name="edu.osu.guessthatimage.LoginScreen" />
 
@@ -42,37 +38,25 @@
             android:name="edu.osu.guessthatimage.OptionMenu"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY"
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:permission="edu.osu.guessthatimage.LAUNCHACTIVITY">
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.Game"
-            android:label="@string/title_activity_game" 
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:label="@string/title_activity_game">
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.Settings"
-            android:label="@string/title_activity_settings" 
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:label="@string/title_activity_settings">
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.LeaderBoard"
-            android:label="@string/title_activity_leader_board" 
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:label="@string/title_activity_leader_board">
         </activity>
-        <activity android:name="edu.osu.guessthatimage.SignUp" 
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+        <activity android:name="edu.osu.guessthatimage.SignUp">
         </activity>
         <activity
             android:name="edu.osu.guessthatimage.Help"
-            android:label="@string/title_activity_help" 
-            android:screenOrientation="portrait"
-			android:configChanges="keyboardHidden|orientation|screenSize">
+            android:label="@string/title_activity_help">
         </activity>
     </application>
 
